"main" css class moved down to avoid overlapping with navbar

--- a/style/style.css
+++ b/style/style.css
@@ -5,5 +5,6 @@ body {
 }
 
 .main {
+    position: absolute;
     top: 60px;
 }
